--- a/docs/index.css
+++ b/docs/index.css
@@ -1,136 +1,290 @@
-h1{
-    font-size: 50px
-}
-.portfolio{
-    text-align: center;
-    font-weight: bold;
-    font-style: oblique;
-    font-family: "Times New Roman" ;
-}
-nav {
-    width: 100%;
-    height: 70px;
-    font-size: 30px;
-    background-color: darkgray;
-    padding-top: 5px;
-    box-sizing: border-box;
+
+@media (min-width: 481px) {
+    /* スマホ用のレイアウト設定 */
+    h1{
+        font-size: 50px
     }
-.menu{
-    float: right;
-}
-
-/* .container{
-    background-color: rgb(50, 195, 206);
-
-    } */
-
-ul{
-    min-width:130px;
-}
-ul.menu {
-    display: flex;
-}
-li{
-    font-size: 20px;
-}
-li.menu {
-    list-style: none;
-    font-size: 30px
-}
-.profile{
-    padding: 1em 1.5em;
-    margin: 2em 0;
-    background-color:#f6faee;/*背景色*/
-    border-left: solid 10px #6b8e23;/*左ライン*/
-    color:#000000;/*文字色*/
-  }
-
-.title{
-    text-align: center;
-    font-size: 35px;
-    font-family: "Arial", sans-serif;
-    font-weight: bold;
-}
-a {
-    display: block;
-    text-decoration: none;
-    color: white;
-    margin-right: 35px;
-}
-p{
-    font-size:16px;
-}
-.skill{
-    text-align: center;
-}
-.skillname{
-    font-size: 20px;
-}
-
-footer{
-    text-align: center;
-}
-body {
-    padding-top: 50px;
-    background-color: rgb(255, 255, 255);
-    font-family: 'メイリオ', sans-serif;
-}
-.starter-template {
-    padding: 40px 15px;
-    background-color: rgb(255, 255, 255);
-}
-/* .container{
-
-} */
-
-img {
-width:75;
-max-width: 75%;
-height: auto;
-}
-.Contents {
-text-align: center;
-padding-top: 10px;
-padding-bottom: 20px;
-}
-.slide{
-    border: solid;
-    background-color:#ffffe0;
-}
-.g-slide{
-position: relative;
-overflow: hidden;
-margin: 15px 0 20px 20%;
-padding-bottom: 50%;
-padding-top: 65px;
-}
-.g-slide iframe {
-width: 100%;
-height: 100%;
-position: absolute;
-top: 0;
-left: 0;
-}
-video {
-top:0;
-width: 60%;
-height: 60%;
-background: #000;/*背景を黒で表示*/
-}
-.workstitle{
-    text-align: center;
-    font-size: 35px;
-    font-family: "Arial", sans-serif;
-    font-weight: bold;
-}
-.worksname{
+    .portfolio{
+        text-align: center;
+        font-weight: bold;
+        font-style: oblique;
+        font-family: "Times New Roman" ;
+    }
+    nav {
+        width: 100%;
+        height: 70px;
+        font-size: 30px;
+        background-color: darkgray;
+        padding-top: 5px;
+        box-sizing: border-box;
+        }
+    .menu{
+        float: right;
+    }
     
-
+    /* .container{
+        background-color: rgb(50, 195, 206);
+    
+        } */
+    
+    ul{
+        min-width:130px;
+    }
+    ul.menu {
+        display: flex;
+    }
+    li{
+        font-size: 20px;
+    }
+    li.menu {
+        list-style: none;
+        font-size: 30px
+    }
+    .profile{
+        padding: 1em 1.5em;
+        margin: 2em 0;
+        background-color:#f6faee;/*背景色*/
+        border-left: solid 10px #6b8e23;/*左ライン*/
+        color:#000000;/*文字色*/
+      }
+    
+    .title{
+        text-align: center;
+        font-size: 35px;
+        font-family: "Arial", sans-serif;
+        font-weight: bold;
+    }
+    a {
+        display: block;
+        text-decoration: none;
+        color: white;
+        margin-right: 35px;
+    }
+    p{
+        font-size:16px;
+    }
+    .skill{
+        text-align: center;
+    }
+    .skillname{
+        font-size: 20px;
+    }
+    
+    footer{
+        text-align: center;
+    }
+    body {
+        padding-top: 50px;
+        background-color: rgb(255, 255, 255);
+        font-family: 'メイリオ', sans-serif;
+    }
+    .starter-template {
+        padding: 40px 15px;
+        background-color: rgb(255, 255, 255);
+    }
+    /* .container{
+    
+    } */
+    
+    img {
+    width:75;
+    max-width: 75%;
+    height: auto;
+    }
+    .Contents {
     text-align: center;
-    padding: 1em 1.5em;
-    margin: 2em 0;
-    background-color:#f4f9ff;/*背景色*/
-    border:1px solid #84c1ff;/*枠線*/
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);/*影*/
-    color:#000000;/*文字色*/
-}
+    padding-top: 10px;
+    padding-bottom: 20px;
+    }
+    .slide{
+        border: solid;
+        background-color:#ffffe0;
+    }
+    .g-slide{
+    position: relative;
+    overflow: hidden;
+    margin: 15px 0 20px 20%;
+    padding-bottom: 50%;
+    padding-top: 65px;
+    }
+    .g-slide iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    }
+    video {
+    top:0;
+    width: 60%;
+    height: 60%;
+    background: #000;/*背景を黒で表示*/
+    }
+    .workstitle{
+        text-align: center;
+        font-size: 35px;
+        font-family: "Arial", sans-serif;
+        font-weight: bold;
+    }
+    .worksname{
+        
+    
+        text-align: center;
+        padding: 1em 1.5em;
+        margin: 2em 0;
+        background-color:#f4f9ff;/*背景色*/
+        border:1px solid #84c1ff;/*枠線*/
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);/*影*/
+        color:#000000;/*文字色*/
+    }
+  }
+  
+
+
+@media (max-width: 480px) {
+    /* スマホ用のレイアウト設定 */
+    h1{
+        font-size: 50px
+    }
+    .portfolio{
+        text-align: center;
+        font-weight: bold;
+        font-style: oblique;
+        font-family: "Times New Roman" ;
+    }
+    nav {
+        width: 100%;
+        height: 30px;
+        font-size: 10px;
+        background-color: darkgray;
+        padding-top: 5px;
+        box-sizing: border-box;
+        }
+    .menu{
+        float: right;
+        font-size: 5px;
+    }
+    
+    /* .container{
+        background-color: rgb(50, 195, 206);
+    
+        } */
+    
+    ul{
+        min-width:10px;
+    }
+    ul.menu {
+        display: flex;
+        text-align: left;
+    }
+    li{
+        font-size: 15px;
+    }
+    li.menu {
+        list-style: none;
+        font-size: 15px
+    }
+    .profile{
+        
+        padding: 1em 1.5em;
+        margin: 2em 0;
+        background-color:#f6faee;/*背景色*/
+        border-left: solid 10px #6b8e23;/*左ライン*/
+        color:#000000;/*文字色*/
+      }
+    
+    .title{
+        text-align: center;
+        font-size: 25px;
+        font-family: "Arial", sans-serif;
+        font-weight: bold;
+    }
+    a {
+        display: block;
+        text-decoration: none;
+        color: white;
+        margin-right: 35px;
+    }
+    p{
+        font-size:16px;
+    }
+    .skill{
+        text-align: center;
+    }
+    .skillname{
+        font-size: 20px;
+    }
+    
+    footer{
+        text-align: center;
+    }
+    body {
+        padding-top: 50px;
+        background-color: rgb(255, 255, 255);
+        font-family: 'メイリオ', sans-serif;
+    }
+    .starter-template {
+        padding: 40px 15px;
+        background-color: rgb(255, 255, 255);
+    }
+    /* .container{
+    
+    } */
+    
+    img {
+    width:75;
+    max-width: 75%;
+    height: auto;
+    }
+    .Contents {
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    }
+    .slide{
+        border: solid;
+        background-color:#ffffe0;
+    }
+    .g-slide{
+    position: relative;
+    overflow: hidden;
+    margin: 15px 0 20px 20%;
+    padding-bottom: 50%;
+    padding-top: 65px;
+    }
+    .g-slide iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    }
+    video {
+    top:0;
+    width: 60%;
+    height: 60%;
+    background: #000;/*背景を黒で表示*/
+    }
+    .workstitle{
+        text-align: center;
+        font-size: 35px;
+        font-family: "Arial", sans-serif;
+        font-weight: bold;
+    }
+    .worksname{
+        
+        font-size: 15px;
+        text-align: center;
+        padding: 1em 1.5em;
+        margin: 2em 0;
+        background-color:#f4f9ff;/*背景色*/
+        border:1px solid #84c1ff;/*枠線*/
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);/*影*/
+        color:#000000;/*文字色*/
+    }
+    h2{
+        font-size: 25px;
+    }
+
+  }
+  
